cc_library(
    name = "iqa",
    srcs = ["iqa.cpp"],
    hdrs = ["iqa.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//core:reference_counted",
        "//imaging:image",
    ],
)

cc_test(
    name = "iqa_test",
    size = "small",
    srcs = [
        "iqa_test.cpp",
    ],
    deps = [
        ":iqa",
        "@googletest//:gtest_main",
    ],
)
