"""
    SPDX-FileCopyrightText: Copyright 2024 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@rules_qt//:qt.bzl", "qt_cc_binary")

cc_binary(
    name = "compiler_information",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "@boost.predef//:predef",
        "@fmt",
    ],
)
