"""
    SPDX-FileCopyrightText: Copyright 2025 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "compiler_information",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "@boost.predef",
        "@fmt",
    ],
)
