"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

load("//tests/flatland:tests.bzl", "cc_test_flatland")

cc_test_flatland(
    name = "TestCamera",
    srcs = [
        "test_camera.cpp",
    ],
)

cc_test_flatland(
    name = "TestFilm",
    srcs = [
        "test_film.cpp",
    ],
)
