"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

load("//tests/flatland:tests.bzl", "cc_test_flatland")

cc_test_flatland(
    name = "TestAmbientOcclusion",
    srcs = [
        "test_ambient_occlusion.cpp",
    ],
    data = ["//scenes"],
)

cc_test_flatland(
    name = "TestPathMirrorReflection",
    srcs = [
        "test_path_mirror_reflection.cpp",
    ],
    data = ["//scenes"],
)

cc_test_flatland(
    name = "TestPathSpecularTransmission",
    srcs = [
        "test_path_specular_transmission.cpp",
    ],
    data = ["//scenes"],
)
