"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

load("//bazel:compiler.bzl", "flatland_linker_opts")
load("//bazel:compiler.bzl", "FLATLAND_DEFAULT_LINKOPTS")

flatland_linker_opts()

load("//tests/flatland:tests.bzl", "cc_test_flatland")

cc_test(
    name = "TestLoadScene",
    timeout = "short",
    srcs = [
        "test_load_scene.cpp",
    ],
    data = [
        "//scenes",
        "//tests/scenes:TestSceneFiles",
    ],
    linkopts = FLATLAND_DEFAULT_LINKOPTS,
    deps = [
        "//srcs:Flatland",
        "@googletest//:gtest_main",
        "@pugixml",
    ],
)

cc_test(
    name = "TestScene",
    timeout = "short",
    srcs = [
        "test_scene.cpp",
    ],
    data = [
        "//scenes",
        "//tests/scenes:TestSceneFiles",
    ],
    linkopts = FLATLAND_DEFAULT_LINKOPTS,
    deps = [
        "//srcs:Flatland",
        "@googletest//:gtest_main",
    ],
)
