"""
    SPDX-FileCopyrightText: Copyright 2025 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

bazel_dep(name = "rules_cc", version = "0.2.16")

#-------------------------------------------------------------------------------------
# LLVM toolchain for Bazel
#-------------------------------------------------------------------------------------

bazel_dep(name = "toolchains_llvm", version = "1.6.0")
#git_override(
#    module_name = "toolchains_llvm",
#    commit = "b3c96d2dbc698eab752366bbe747e2a7df7fa504",
#    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
#)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

LLVM_VERSIONS = {
    "": "19.1.3",  # Default version 19.1.3
    "darwin-aarch64": "19.1.3",
    "darwin-x86_64": "19.1.3",
}

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = LLVM_VERSIONS,
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

#register_toolchains("@llvm_toolchain//:all")  # If uncommented Ubuntu and macOS build breaks

#-------------------------------------------------------------------------------------
# Local C++ toolchain
#-------------------------------------------------------------------------------------

cc_configure = use_extension(
    "@rules_cc//cc:extensions.bzl",
    "cc_configure_extension",
)
use_repo(cc_configure, "local_config_cc")
